--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-dom": "^15.3.2",
     "react-mixin": "^2.0.2",
     "webpack": "^4.44.1",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "babel-plugin-react-html-attrs": "^2.0.0",
+    "style-loader": "^0.13.1",
+    "css-loader": "^0.25.0"
   },
   "devDependencies": {
     "webpack-cli": "^3.3.12"
