--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^2.0.1",
     "@babel/core": "^7.11.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
