--- a/package.json
+++ b/package.json
@@ -12,20 +12,22 @@
     "antd": "^2.0.1",
     "@babel/core": "^7.11.1",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^10.0.0",
     "react": "^15.3.2",
+    "babel-loader": "^7.1.5",
     "react-dom": "^15.3.2",
     "react-mixin": "^2.0.2",
     "webpack": "^4.44.1",
     "webpack-dev-server": "^3.11.0",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "style-loader": "^0.13.1",
-    "css-loader": "^0.25.0"
+    "css-loader": "^0.25.0",
+    "json-loader": "^0.5.4"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "babel-plugin-import": "^1.0.1"
   }
 }
