--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "05-01",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "root.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,7 +24,8 @@
     "babel-plugin-react-html-attrs": "^2.0.0",
     "style-loader": "^0.13.1",
     "css-loader": "^0.25.0",
-    "json-loader": "^0.5.4"
+    "json-loader": "^0.5.4",
+    "react-router": "^2.8.1"
   },
   "devDependencies": {
     "webpack-cli": "^3.3.12",
